--- a/example.css
+++ b/example.css
@@ -46,3 +46,18 @@ wrapper {
  background-color:#ffcc5c;
  grid-column:span 6;
 }
+
+@media screen and (max-width: 480px){
+  .header{
+    grid-column: span 6;
+  }
+
+  .menu{
+    grid-row:1;
+    grid-column: span 6;
+  }
+
+  .content{
+    grid-column: span 12;
+  }
+}
