--- a/example.css
+++ b/example.css
@@ -2,12 +2,39 @@ body{
   background-color: #ffeead;
 }
 
+/* .homepage {
+  text-align: center;
+} */
+
+.homepage{
+  display:flex;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+a{
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  color: #ffcc5c;
+  font-size: 20px;
+}
+
+a:hover{
+  color: #ff6f69;
+}
 h1{
   color: #ff6f69;
   font-family: 'Roboto', sans-serif;
   text-align: center;
   padding: 30px 0 10px;
-  margin: 0px
+}
+
+div{
+  display: flex;
+  align-items:center;
+  padding-left: 20px;
+  /* justify-content: center; */
 }
 
 wrapper > div {
